force-app/main/default/objects/Employee__c/fields/Employer_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Identification_Number__c</fullName>
    <label>Employer Identification Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>