force-app/main/default/objects/Employee__c/fields/Type_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Full_Name__c</fullName>
    <label>Type Full Name</label>
    <type>TextArea</type>
</CustomField>